unpackaged/config/qa/objects/CustomObject2__c.object
<CustomObject>
    <fields>
        <fullName>C2_currency_2__c</fullName>
        <label>C2_currency_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C2_currency__c</fullName>
        <label>C2_currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CustomObject2s</relationshipLabel>
        <relationshipName>CustomObject2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CustomObject2</label>
    <nameField>
        <label>CustomObject2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomObject2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>